Fixing home page overflow issue

--- a/src/animations.css
+++ b/src/animations.css
@@ -27,7 +27,7 @@
 @keyframes loginIllustrationIn{
     0%{
         opacity: 0;
-        transform: translateY(10vh);
+        transform: translateY(5vh);
     }
     100%{
         opacity: 1;
