--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,6 @@
 
 body{
     background-color: #f5f5f5;
-    overflow: hidden;
 }
 
 header{
