--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: right;
     align-items: center;
+    overflow: hidden !important;
 }
 
 .loginSectionLogoDiv{
